# steblikcom-django

./: .dockerignore  .env.production.example  .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
apps/: markdown_utils.py
apps/accounts/: admin.py  models.py  services.py  views.py
apps/accounts/management/commands/: send_announcement.py
apps/accounts/migrations/: 0001_initial.py  0002_announcement_announcementrecipient.py  0003_announcement_post_slug_and_more.py
apps/blog/: services.py  urls.py  views.py
apps/blog/posts/01-hugo-website-github-pages/: index.md
apps/blog/posts/02-clean-architecture-python/: index.md
apps/blog/posts/03-dbt-incremental/: index.md
apps/pages/: apps.py  urls.py  views.py
apps/pages/migrations/: 0001_initial.py  0002_delete_page.py
apps/web/config/: context_processors.py  sitemaps.py  urls.py
apps/web/config/settings/: base.py  dev.py  prod.py  test.py
apps/web/static/css/: 01-tokens.css  02-base.css  03-layout.css  06-utilities.css
apps/web/steblik/accounts/: adapter.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/web/steblik/blog/: apps.py  services.py  views.py
apps/web/steblik/emailing/: __init__.py  admin.py  apps.py  backend.py  models.py  senders.py
apps/web/steblik/pages/: apps.py  urls.py  views.py
apps/web/templates/: base.html
apps/web/templates/account/: email.html  email_confirm.html  logout.html  password_reset.html  password_reset_from_key.html  signup.html
config/: context_processors.py  settings.py  sitemaps.py  urls.py
content/posts/clean-architecture-python/: index.md
content/posts/dbt-incremental/: index.md
content/posts/hugo-website-github-pages/: index.md
content/posts/pandas-polars-migration/: index.md
content/posts/polars-streaming-out-of-core/: index.md
content/posts/salesforce-dataloader-tuning/: index.md
docs/: PRIVACY_INVARIANTS.md  SECURITY.md
infra/: Dockerfile  compose.dev.yaml  compose.prod.yaml  compose.yaml
scripts/: check_privacy_invariants.sh  entrypoint.sh
static/: CNAME
static/css/: 01-tokens.css  03-layout.css  04-prose.css  05-components.css  06-utilities.css
templates/: base.html
templates/account/: login.html  password_change.html  password_reset_done.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/blog/: detail.html  list.html
templates/emails/: new_post.html
templates/pages/: about.html  experience.html  home.html  references.html
(+40 files in other folders)
